<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Application_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_houselist"
            android:icon="@drawable/ic_view_house_list_24dp"
            android:title="@string/house_list" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_eligibility"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/eligibility" />
        <item
            android:id="@+id/nav_Application_guide"
            android:icon="@drawable/ic_application_black_24dp"
            android:title="@string/application_guide" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq_24dp"
            android:title="@string/faq" />

    </group>

</menu>
