<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    tools:context=".Filter">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:id="@+id/txt-f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/application_type_s"
            android:textSize="18sp"
            android:textColor="@color/textBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt-title-eligi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn-1-1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/family_with_dependent_children"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn-1-2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/senior_age_55_or_older"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn-1-3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/people_with_disabilities"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn-1-4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/single_people"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn-1-5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/couples"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn-1-6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/show_all"
                android:textSize="15dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt-f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/unit_type_s"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt-title-eligi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn-2-1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/studio"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn-2-2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/_1_bedroom"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn-2-3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/_2_bedrooms"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn-2-4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/_3_or_more_bds"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/btn-2-5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#72C5CA"
            android:text="@string/show_all"
            android:textSize="15dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/txt-f3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/location_area"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt-title-eligi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn-3-1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/westside"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn-3-2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/eastside"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn-3-3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/downtown"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn-3-4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#72C5CA"
                android:text="@string/queensborough"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/btn-3-5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#72C5CA"
            android:text="@string/show_all"
            android:textSize="15dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn-next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="#CAAB72"
            android:text="@string/next"
            android:textSize="16sp"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>

</RelativeLayout>